--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:todo
 spring.datasource.username=root
 spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.path=/h2-console
+spring.datasource.connectionProperties=characterEncoding=UTF-8;useUnicode=true
+
 
 logging.level.com.example.todo.repository=DEBUG
 logging.level.com.example.todo.service=DEBUG
