--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,9 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.2'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+bootJar {
+    archiveFileName = 'todo-0.0.1-SNAPSHOT.jar'
+}
 
 java {
     sourceCompatibility = '17'
