--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:todo
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.sql-script-encoding=UTF-8
 
 logging.level.com.example.todo.repository=DEBUG
 logging.level.com.example.todo.service=DEBUG
