--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.2'
     id 'io.spring.dependency-management' version '1.1.2'
+    id 'com.github.node-gradle.node' version '3.0.1'
+
 }
 
 bootJar {
@@ -39,6 +41,14 @@ dependencies {
 	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.2.1'
 }
 
+node {
+    version = '18.16.0'
+    npmVersion = '9.5.0'
+    download = true
+}
+
+
+
 tasks.named('test') {
     useJUnitPlatform()
 }
@@ -46,3 +56,10 @@ tasks.named('test') {
 tasks.named('bootRun') {
     sourceResources sourceSets.main
 }
+
+tasks.register('compileTypeScript', NpmTask) {
+    dependsOn 'npmInstall'
+    args = ['run', 'tscbuild']
+}
+
+processResources.dependsOn "compileTypeScript"
